ingress/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-argocd
  namespace: argocd
  annotations:
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/enable-cors: "true"
    # nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   more_set_headers "X-Robots-Tag: noindex, nofollow";
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - dfcicd.datafortress.cloud
    secretName: tls-secret
  rules:
  - host: "dfcicd.datafortress.cloud"
    http:
      paths:
        - path: "/" # wildcard for now
          pathType: Prefix
          backend:
            service:
              name: argocd-server
              port:
                number: 8080
